--- a/pokemonapp/src/Pokedex.css
+++ b/pokemonapp/src/Pokedex.css
@@ -11,3 +11,9 @@
     flex-wrap: wrap;
 }
 
+h4{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
